Corrected layout bugs (#12275)
* Corrected quick actions menu on narrow rows

* Fixed quick edit buttons on mobile

* Chat button in header always visible

--- a/public_html/layouts/basic/styles/components/_Global.scss
+++ b/public_html/layouts/basic/styles/components/_Global.scss
@@ -277,7 +277,7 @@ body:not(.desktop) {
 			padding: 0.2rem;
 			margin-top: -0.2rem;
 			min-width: unset;
-
+			line-height: 1;
 			.btn-group {
 				vertical-align: top;
 			}
